Fix display of home page when description is too short

--- a/_css/style.sass
+++ b/_css/style.sass
@@ -107,6 +107,7 @@ ul.post-list ul ul
   text-align: right
 
 .post-list.index
+  clear: both
   li
     width: 47%
     display: inline-block
